--- a/cfg/Custom_Clash_Smart_All_In_One.ini
+++ b/cfg/Custom_Clash_Smart_All_In_One.ini
@@ -91,7 +91,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;Smart 内核专用模板
 custom_proxy_group=🚀 手动选择`select`[]♻️ 自动智能`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`.*
 custom_proxy_group=♻️ 自动智能`smart`.*`https://www.gstatic.com/generate_204`300`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
-custom_proxy_group=💬 即时通讯`select`[]♻️ 自动智能`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择
+custom_proxy_group=💬 即时通讯`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择
 custom_proxy_group=🌐 社交媒体`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
 custom_proxy_group=📞 Talkatone`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连
@@ -99,16 +99,16 @@ custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 香港智能`[]🇺🇸 美国
 custom_proxy_group=🤖 Copilot`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=🤖 AI服务`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
-custom_proxy_group=📹 YouTube`select`[]🇸🇬 新加坡智能`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
-custom_proxy_group=🎥 Netflix`select`[]🇸🇬 新加坡智能`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
-custom_proxy_group=🎥 DisneyPlus`select`[]🇸🇬 新加坡智能`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
-custom_proxy_group=🎥 HBO`select`[]🇸🇬 新加坡智能`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
-custom_proxy_group=🎥 PrimeVideo`select`[]🇸🇬 新加坡智能`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
-custom_proxy_group=🎥 AppleTV+`select`[]🇸🇬 新加坡智能`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
+custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港智能`[]🇸🇬 新加坡智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
+custom_proxy_group=🎥 Netflix`select`[]🇭🇰 香港智能`[]🇸🇬 新加坡智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
+custom_proxy_group=🎥 DisneyPlus`select`[]🇭🇰 香港智能`[]🇸🇬 新加坡智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
+custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港智能`[]🇸🇬 新加坡智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
+custom_proxy_group=🎥 PrimeVideo`select`[]🇭🇰 香港智能`[]🇸🇬 新加坡智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
+custom_proxy_group=🎥 AppleTV+`select`[]🇭🇰 香港智能`[]🇸🇬 新加坡智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=🎥 Emby`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=📺 Bahamut`select`[]🇼🇸 台湾智能`[]🚀 手动选择`[]🎯 全球直连
-custom_proxy_group=🌎 国外媒体`select`[]🇸🇬 新加坡智能`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
+custom_proxy_group=🌎 国外媒体`select`[]🇭🇰 香港智能`[]🇸🇬 新加坡智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=💳 PayPal`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=🛒 国外电商`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连
