--- a/cfg/Custom_Clash_Smart_All_In_One.ini
+++ b/cfg/Custom_Clash_Smart_All_In_One.ini
@@ -25,6 +25,8 @@ ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
 ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/daveyuuuu/Custom_OpenClash_Rules/refs/heads/main/rule/Custom_Direct_Classical.yaml,28800
 ;本项目收录的代理规则
 ruleset=🚀 手动选择,clash-classic:https://raw.githubusercontent.com/daveyuuuu/Custom_OpenClash_Rules/refs/heads/main/rule/Custom_Proxy_Classical.yaml,28800
+;us 代理规则
+ruleset=🇺🇸 美区代理,clash-classic:https://raw.githubusercontent.com/daveyuuuu/Custom_OpenClash_Rules/refs/heads/main/rule/Custom_US_Domain.yaml,28800
 ;谷歌在国内可用的域名直连
 ruleset=🎯 全球直连,[]GEOSITE,google-cn
 ;国内游戏域名直连
@@ -89,7 +91,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置节点分组标志位
 ;节点地区分组参考本项目推荐机场而设立
 ;Smart 内核专用模板
-custom_proxy_group=🚀 手动选择`select`[]♻️ 自动智能`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`.*
+custom_proxy_group=🚀 手动选择`select`[]🇭🇰 香港智能`[]♻️ 自动智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`.*
 custom_proxy_group=♻️ 自动智能`smart`.*`https://www.gstatic.com/generate_204`300`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 custom_proxy_group=💬 即时通讯`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择
 custom_proxy_group=🌐 社交媒体`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
@@ -109,15 +111,16 @@ custom_proxy_group=🎥 Emby`select`[]🇭🇰 香港智能`[]🇺🇸 美国智
 custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=📺 Bahamut`select`[]🇼🇸 台湾智能`[]🚀 手动选择`[]🎯 全球直连
 custom_proxy_group=🌎 国外媒体`select`[]🇭🇰 香港智能`[]🇸🇬 新加坡智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
-custom_proxy_group=💳 PayPal`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
+custom_proxy_group=💳 PayPal`select`[]🇺🇸 美国智能`[]🇭🇰 香港智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
+custom_proxy_group=🇺🇸 美区代理`select`[]🇺🇸 美国智能`[]🇭🇰 香港智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=🛒 国外电商`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连
 custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连
 custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能
 custom_proxy_group=💾 OneDrive`select`[]🎯 全球直连`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能
-custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能
-custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
+custom_proxy_group=🎮 游戏平台`select`[]🇭🇰 香港智能`[]🎯 全球直连`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能
+custom_proxy_group=🎮 Steam`select`[]🇭🇰 香港智能`[]🎯 全球直连`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
 custom_proxy_group=⏬ PT站点`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
 custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`.*
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港智能`[]🇺🇸 美国智能`[]🇯🇵 日本智能`[]🇸🇬 新加坡智能`[]🇼🇸 台湾智能`[]🇰🇷 韩国智能`[]🇨🇦 加拿大智能`[]🇬🇧 英国智能`[]🇫🇷 法国智能`[]🇩🇪 德国智能`[]🇳🇱 荷兰智能`[]🇹🇷 土耳其智能`[]🏠 家宽智能`[]🌐 其他智能`[]🚀 手动选择`[]♻️ 自动智能`[]🎯 全球直连`.*
