--- a/rule/Custom_Proxy_Classical.yaml
+++ b/rule/Custom_Proxy_Classical.yaml
@@ -21,3 +21,14 @@ payload:
   - DOMAIN-SUFFIX,xn--ngstr-lra8j.com
   - IP-CIDR,1.0.0.1/32,no-resolve
   - IP-CIDR,1.1.1.1/32,no-resolve
+  # leetcode
+  - DOMAIN-SUFFIX,leetcode.com
+  - DOMAIN-SUFFIX,leetcode.cn
+  # podcast
+  - DOMAIN-SUFFIX,bag.itunes.apple.com
+  - DOMAIN-SUFFIX,amp-api.podcast.apple.com
+  - DOMAIN-SUFFIX,bookkeeper.itunes.apple.com
+  - DOMAIN-SUFFIX,podcasts.apple.com
+  - DOMAIN-SUFFIX,play.itunes.apple.com
+  - DOMAIN-SUFFIX,xp.apple.com
+  - DOMAIN-SUFFIX,lookup-api.apple.com
