--- a/rule/Custom_Proxy_Classical.yaml
+++ b/rule/Custom_Proxy_Classical.yaml
@@ -29,3 +29,4 @@ payload:
   - DOMAIN-SUFFIX,play.itunes.apple.com
   - DOMAIN-SUFFIX,xp.apple.com
   - DOMAIN-SUFFIX,lookup-api.apple.com
+  - DOMAIN-SUFFIX,xiaoyakankan.com
