--- a/rule/Custom_Proxy_Classical.yaml
+++ b/rule/Custom_Proxy_Classical.yaml
@@ -30,3 +30,4 @@ payload:
   - DOMAIN-SUFFIX,xp.apple.com
   - DOMAIN-SUFFIX,lookup-api.apple.com
   - DOMAIN-SUFFIX,xiaoyakankan.com
+  - DOMAIN-SUFFIX,amytele.net
