--- a/rule/Custom_Proxy_Classical.yaml
+++ b/rule/Custom_Proxy_Classical.yaml
@@ -31,3 +31,5 @@ payload:
   - DOMAIN-SUFFIX,lookup-api.apple.com
   - DOMAIN-SUFFIX,xiaoyakankan.com
   - DOMAIN-SUFFIX,amytele.net
+  - DOMAIN-SUFFIX,tagxx.vip
+  - DOMAIN-SUFFIX,tagweb.vip
