add xiaoyakankan video

--- a/rule/Custom_US_Domain.yaml
+++ b/rule/Custom_US_Domain.yaml
@@ -2,4 +2,5 @@ payload:
   # google learn about
   - DOMAIN-SUFFIX,learning.google.com
   - DOMAIN-SUFFIX,la.btc620.com
+  # xiao ya kan kan video
   - DOMAIN-SUFFIX,g.xlzyd.com
