--- a/rule/Custom_US_Domain.yaml
+++ b/rule/Custom_US_Domain.yaml
@@ -5,3 +5,4 @@ payload:
   # xiao ya kan kan video
   - DOMAIN-SUFFIX,g.xlzyd.com
   - DOMAIN-SUFFIX,gs.gszyi.com
+  - DOMAIN-SUFFIX,ukzy.ukubf8.com
